--- a/beamerthemejhsph.sty
+++ b/beamerthemejhsph.sty
@@ -61,14 +61,14 @@
 {\large \insertauthor}
 
 \br
-{\small Department of Biostatistics}
+{\small Department of Biology}
 
 \br
 \insertdate
 
 \br
 
-\includegraphics[width=1.8in,keepaspectratio]{jhsph_logo}
+\includegraphics[width=1.8in,keepaspectratio]{jhu-krieger-logo.png}
 
 \end{center}
 }
@@ -83,7 +83,7 @@
 %\vspace{-0.9cm}\begin{beamercolorbox}[sep=0em,ht=0.4cm,dp=0.3cm,wd=\paperwidth,leftskip=0cm,center]{postit}\parbox{0.333333\paperwidth}{{\fontsize{4}{4} \selectfont \textcopyright2017,  Johns Hopkins University. All rights reserved } }\parbox{0.333333\paperwidth}{ \hspace{0.01cm} }\parbox{0.31\paperwidth}{\hfill\includegraphics[width=.5cm]{jhsph_shield}}\parbox{0.034\paperwidth}{ }\end{beamercolorbox}
 
 \ifnum \insertpagenumber > 1
-\vspace{-0.9cm}\begin{beamercolorbox}[sep=0em,ht=0.4cm,dp=0.3cm,wd=\paperwidth,leftskip=0cm,center]{postit}\parbox[]{0.333333\paperwidth}{\centering \fontsize{4}{4} \selectfont \textcopyright \the\year,  Johns Hopkins University. All rights reserved } \parbox{0.333333\paperwidth}{ \hspace{0.01cm} }\parbox{0.31\paperwidth}{\hfill \includegraphics[width=.5cm]{jhsph_shield}}\end{beamercolorbox}
+\vspace{-0.9cm}\begin{beamercolorbox}[sep=0em,ht=0.4cm,dp=0.3cm,wd=\paperwidth,leftskip=0cm,center]{postit}\parbox[]{0.333333\paperwidth}{\centering \fontsize{4}{4} \selectfont \textcopyright \the\year,  Johns Hopkins University. All rights reserved } \parbox{0.333333\paperwidth}{ \hspace{0.01cm} }\parbox{0.31\paperwidth}{\hfill \includegraphics[width=.5cm]{jhu-krieger-icon.png}}\end{beamercolorbox}
 \else
 \vspace{-0.9cm}\begin{beamercolorbox}[sep=0em,ht=0.4cm,dp=0.3cm,wd=\paperwidth,leftskip=0cm,center]{postthat}\parbox{0.333333\paperwidth}{\hfill}\parbox{0.333333\paperwidth}{ \hspace{0.01cm} }\parbox{0.31\paperwidth}{\hfill}\parbox{0.034\paperwidth}{ }\end{beamercolorbox}
 
